serd (0.32.3) unstable; urgency=medium

  * Clean up enum declarations
  * Fix library current_version on MacOS
  * Fix overly permissive parsing of syntax names on the command line
  * Fix parsing NQuads lines with no space before the final dot
  * Gracefully handle errors while writing the end of anonymous nodes
  * Support reading lone lists in lax mode
  * Treat out of range unicode characters as errors
  * Write blank lines between graphs and statements in TriG

 -- David Robillard <d@drobilla.net>  Mon, 24 Jun 2024 16:44:31 +0000

serd (0.32.2) stable; urgency=medium

  * Enable clang nullability checks
  * Fix writing empty list objects within blank nodes

 -- David Robillard <d@drobilla.net>  Tue, 23 Jan 2024 19:32:21 +0000

serd (0.32.0) stable; urgency=medium

  * Add Windows path separator support to serd_node_new_file_uri()
  * Add long "help" and "version" options to serdi
  * Add options to disable html or singlehtml documentation
  * Add serd_reader_skip_until_byte() to public API
  * Allow SERD_API to be defined by the user
  * Avoid creating test files in the current directory
  * Avoid using ASCII grave as a quote
  * Check for POSIX features with the build system
  * Clean up and improve test suite
  * Clean up code
  * Fix crash when trying to read chunks without starting
  * Fix hang when skipping an error at EOF when lax parsing
  * Fix incorrect parsing of strange quote escape patterns
  * Fix possible hang when writing nested Turtle lists
  * Fix potential memory leaks when a write is aborted
  * Fix relative URI creation
  * Gracefully handle bad characters in Turtle blank node syntax
  * Gracefully handle bad characters in Turtle datatype syntax
  * Improve TriG pretty-printing and remove trailing newlines
  * Improve pretty-printing of lists and inline subjects
  * Improve serdi man page
  * Improve writer error handling
  * Make URI writing stricter by default
  * Make serd_reader_read_chunk() work with NQuads